# contrail-forecast

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docs.yaml
contrail_forecast/: beam_utils.py  configs.yaml  main.py  utils.py
docs/: bibliography.rst  changelog.md  conf.py  index.rst
docs/_static/: references.bib
docs/_static/css/: style.css
docs/notebooks/: forecast-data.ipynb
docs/specs/: forecast-api.md  forecast-data.md
